--- a/.env.example
+++ b/.env.example
@@ -25,7 +25,7 @@ DB_HOST=db
 DB_PORT=3306
 DB_DATABASE=easypeasy
 DB_USERNAME=root
-DB_PASSWORD=password
+DB_PASSWORD=rootpassword
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -63,3 +63,4 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+VITE_DEV_SERVER_URL=http://localhost:3000
